Removed .keyword-style

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <code>
                 print("Hello World!")
             </code>
-            <p>That's right, it's that easy to print in Python! Keep in mind, Python is a case-sensitive language; it can cause issues with your code if you use a capital in the wrong spot. Always double check your code!</p>
+            <p>That's right, it's that easy to print in Python! Keep in mind, Python is a case-sensitive language; it can cause issues with your code if you use a capital letter in the wrong spot. Always double check your code!</p>
         </section>
 
         <section id="objects" class="main-section">
