Formatting and editing

--- a/index.html
+++ b/index.html
@@ -18,29 +18,30 @@
             <input type="checkbox" id="toggle"/>
             <nav class="menu">
                 <ul id=nav-list>
-                    <li><a href="#intro">What is Python?</a> </li>
-                    <li><a href="#pre-reqs">Before You Begin</a> </li>
-                    <li><a href="#first-print">Your First Program</a> </li>
-                    <li><a href="#objects">Object-oriented</a> </li>
-                    <li><a href="#data-types">Data Types</a> </li>
-                    <li><a href="#if-else">If... Else</a> </li>
-                    <li><a href="#loops">Loops</a> </li>
-                    <li><a href="#functions">Functions</a> </li>
+                    <li><a href="#What_is_Python?" class="nav-link">What is Python?</a> </li>
+                    <li><a href="#Before_You_Begin" class="nav-link">Before You Begin</a> </li>
+                    <li><a href="#Your_first_program" class="nav-link">First Program</a> </li>
+                    <li><a href="#Object_oriented" class="nav-link">Object-oriented</a> </li>
+                    <li><a href="#Data_types" class="nav-link">Data Types</a> </li>
+                    <li><a href="#If_else_statements" class="nav-link">If Else</a> </li>
+                    <li><a href="#Loops" class="nav-link">Loops</a> </li>
+                    <li><a href="#Functions" class="nav-link">Functions</a> </li>
+                    <li><a href="References" class="nav-link">References</a> </li>
                 </ul>
             </nav>
         </nav>
 
-        <section id="intro" class="main-section">
+        <section id="What_is_Python?" class="main-section">
             <header>What is Python?</header>
             <p>Python is an interpreted, high-level, object-oriented programming language. Python shines at being able to create powerful, or simple, tools with fairly easy to read blocks of code known as objects. Python is both free and open-source, which has lead to users from all over the world creating a vast number of libraries and modules. This guide uses Python 3. </p>
         </section>
 
-        <section id="pre-reqs" class="main-section">
-            <header>Things you may want to know before going further</header>
+        <section id="Before_You_Begin" class="main-section">
+            <header>Before You Begin</header>
             <p>Overall Python can be a very beginner-friendly language, but some basic computer skills/confidence will help a lot. You should also find a resource to teach you how to either set-up an IDE, or how to run commands in your terminal. To get the most out of this guide, write the code out in your chosen environment and run it.</p>
         </section>
 
-        <section id="first-print" class="main-section">
+        <section id="Your_first_program" class="main-section">
             <header>Your first program</header>
             <p>Often when you learn a new language, one of the first things you'll learn how to do is output the statement: "Hello World!" In Python this is really easy to do.</p>
             <code>
@@ -49,8 +50,8 @@
             <p>That's right, it's that easy to print in Python! Keep in mind, Python is a case-sensitive language; it can cause issues with your code if you use a capital letter in the wrong spot. Always double check your code!</p>
         </section>
 
-        <section id="objects" class="main-section">
-            <header>What does object-oriented mean</header>
+        <section id="Object_oriented" class="main-section">
+            <header>Object oriented</header>
             <p>Object-oriented languages are great, they allow you to take chunks of code or data, and store it in different forms. One of the simplest objects you'll use in Python is a variable. </p>
             <code>
                 x = 600
@@ -72,8 +73,8 @@
             </code>
         </section>
 
-        <section id="data-types" class="main-section">
-            <header>Data Types</header>
+        <section id="Data_types" class="main-section">
+            <header>Data types</header>
             <p>Variables can store different data types, and these different data types can be called upon differently and serve different purposes. Python, and programming in general, has many data types. This guide will focus on some of the more simple types. </p>
             <ul>
                 <li>Strings: <span class="keyword-style">str</span>: Basic text. "Hello World!"</li>
@@ -83,8 +84,8 @@
             </ul>
         </section>
 
-        <section id="if-else" class="main-section">
-            <header>If ... else statements</header>
+        <section id="If_else_statements" class="main-section">
+            <header>If else statements</header>
             <p>Many languages have the <span class="keyword-style">if</span> ... <span class="keyword-style">else</span> statements, some in different forms or another. If statements are a way to execute code if certain conditions are present, or to create options depending on the usage. If statements use logical conditions to function 
             </p>
             <pre><code>
@@ -113,7 +114,7 @@
             <p>Other conditions you can use include greater than (&gt;), greater than or equal to (&gt;=), less than (&lt;), less than or equal to (&lt;=) and not equals (!=). It's also important to remember that in an if statement, equals to is represented with two equal signs (==). </p>
         </section>
 
-        <section id="loops" class="main-section">
+        <section id="Loops" class="main-section">
             <header>Loops</header>
             <p>Loops are a very powerful and useful tool. The two loops in Python are the for and while loops.</p>
             <h3>For Loops</h3>
@@ -168,7 +169,7 @@
             </code></pre>
         </section>
 
-        <section id="functions" class="main-section">
+        <section id="Functions" class="main-section">
             <header>Functions</header>
             <p>So by now you've already gotten used to calling on some functions, like <span class="keyword-style">print()</span> for example... But what if you want to make your own functions? This can be done with the <span class="keyword-style">def</span> keyword. </p>
             <pre><code>
@@ -194,7 +195,7 @@
             <p>The <span class="keyword-style">return</span> statement in the above code will return the functions result to the element that is calling it. If you do not add a return statement, or leave the value after it blank, it will return a value of <span class="keyword-style">None.</span> Any code added within the function after the return statement will be ignored. </p>
         </section>
 
-        <section class="main-section">
+        <section id="References" class="main-section">
             <header>References</header>
             <p>All the information on this page comes from:</p>
             <ul id="references-list" class="ref-list">
