Fixed broken references link

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li><a href="#If_else_statements" class="nav-link">If Else</a> </li>
                     <li><a href="#Loops" class="nav-link">Loops</a> </li>
                     <li><a href="#Functions" class="nav-link">Functions</a> </li>
-                    <li><a href="References" class="nav-link">References</a> </li>
+                    <li><a href="#References" class="nav-link">References</a> </li>
                 </ul>
             </nav>
         </nav>
